# jira

./: .commit_template  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  jira.pro
cpptests/: cpptests.pro  main.cpp  test_reply.cpp  test_session.cpp  test_session.h
examples/: CMakeLists.txt  examples.pro
examples/issue/: CMakeLists.txt  Main.qml  issue.pro  main.cpp
examples/login/: CMakeLists.txt  CredentialsButton.qml  CredentialsLayout.qml  Main.qml  UserInputField.qml  UserInputLabel.qml  login.pro  resources.qrc
examples/minimal/: CMakeLists.txt  Main.qml  main.cpp
examples/search/: CMakeLists.txt  Main.qml  main.cpp  search.pro
plugin/: CMakeLists.txt  jira.cpp  jira.h  jiraqmlplugin.cpp  jiraqmlplugin.h  logging.h  plugin.pro
plugin/endpoints/: CMakeLists.txt  agilebacklogendpoint.cpp  agilebacklogendpoint.h  agileboardendpoint.cpp  agileboardendpoint.h  agileepicendpoint.cpp  agileepicendpoint.h  agileissueendpoint.cpp  agileissueendpoint.h  agilesprintendpoint.cpp  agilesprintendpoint.h  api2endpoint.cpp  api2endpoint.h  applicationpropertiesendpoint.cpp  applicationpropertiesendpoint.h  applicationroleendpoint.cpp  applicationroleendpoint.h  attachmentendpoint.cpp  attachmentendpoint.h  auditingendpoint.cpp  auditingendpoint.h  authsession.cpp  authsession.h  avatarendpoint.cpp  avatarendpoint.h  clusterendpoint.cpp  clusterendpoint.h  commentendpoint.cpp  commentendpoint.h  componentendpoint.cpp  componentendpoint.h  configurationendpoint.cpp  configurationendpoint.h  customfieldoptionendpoint.cpp  customfieldoptionendpoint.h  customfieldsendpoint.cpp  customfieldsendpoint.h  dashboardendpoint.cpp  dashboardendpoint.h  endpoint.cpp  (+89 more)
plugin/imports/: qmldir
plugin/network/: CMakeLists.txt  reply.cpp  reply.h  session.cpp  session.h
plugin/qmltypes/: CMakeLists.txt  issue.cpp  issue.h  jira.cpp  jira.h  options.cpp  options.h  responsestatus.cpp  responsestatus.h  user.cpp  user.h
plugin/qmltypes/internal/: CMakeLists.txt  responsestatus.h
plugin/qmltypes/resources/: issue.cpp  issue.h  user.cpp  user.h
plugin/utils/: CMakeLists.txt  globals.h  logging.cpp
qmltests/: plugintest.cpp  qmltests.pro  tst_plugin.qml
tests/: CMakeLists.txt  plugintest.h  tests.pro  tst_plugin.qml
tests/cpptests/: CMakeLists.txt  cpptests.pro
tests/cpptests/test_endpoint/: CMakeLists.txt  test_endpoint.cpp  test_endpoint.h
tests/cpptests/test_issue/: CMakeLists.txt  test_issue.cpp  test_issue.h  test_issue.pro
tests/cpptests/test_reply/: CMakeLists.txt  test_reply.cpp  test_reply.h  test_reply.pro
tests/cpptests/test_response_status/: CMakeLists.txt  test_response_status.cpp  test_response_status.h  test_response_status.pro
tests/cpptests/test_session/: CMakeLists.txt  test_session.cpp  test_session.h  test_session.pro
tests/qmltests/: CMakeLists.txt  main.cpp  main.h  qmltests.pro  test_plugin_data.qrc  tst_issue.qml  tst_issue_endpoint.qml  tst_jira.qml  tst_options.qml  tst_search_endpoint.qml  tst_session_endpoint.qml  tst_user.qml  tst_user_endpoint.qml
tests/qmltests/data/issue/: test_issue.json  test_issueWithNetworkError.json
tests/qmltests/data/login/: test_login.json
tests/qmltests/data/search/: test_search.json
tests/qmltests/data/session/: test_login.json
tests/qmltests/data/user/: test_user.json  test_userWithNetworkError.json
